UnvMichigan - WebDesign - Responsive Design - Mod4Final

--- a/css/style.css
+++ b/css/style.css
@@ -1,161 +1,114 @@
+/* Light-Mode Settings */
+:root {
+  --background-light: #dedede;
+  --text-light: #333;
+  --background-dark: #333;
+  --text-dark: #dedede;
+}
 
+/* Default Scroll Behavior */
+html{
+  scroll-behavior: smooth;
+}
+
+/* Light-Mode body */
 body {
-  background-color: #dedede;
+  background-color: var(--background-light);
+  color: var(--text-light);
+  transition: background-color 0.3s, color 0.3s;
+  padding: 5px;
+  margin: 15px;
+  font-size: 25px;
   font-family:Arial, sans-serif;
 }
 
 h1 {
   text-align: center;
-  font-size: 30px;
-}
-
-h2 {
-  text-align: center;
-  font-size: 24px;
-}
-
-a {
-  color: #000;
-  text-decoration: none;
   font-family:Arial, sans-serif;
+  font-size: 1.95em;
 }
 
-p {
- font-size: 18px;
+h2{
+  text-align:center;
 }
 
-div {
-  width: 95vw;
-  /* margin: 5px;
-  padding: 2px; */
+li{
+  margin-top: 20px;
 }
 
-div img {
+img{
   border: 5px solid blue;
-  width: 95vw;
-  height: 50vh;
-  border-radius: 20px;
-  display:block;
-  margin:auto;
+  border-radius: 35px;
+  width: 100%;
 }
 
-div p {
+.label{
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+figcaption {
   text-align: center;
 }
 
-/* Media Screen for Tablet View */
-@media screen and (min-width:772px) {
-  div {
-    width: 45vw;
-    display: inline-block;
-  }
-  div img {
-    width: 45vw;
-    height: 30vh;
-  }
-}
-
-/* Media Screen for Large Screen  View */
-@media screen and (min-width:998px) {
-  div {
-    width: 30vw;
-    display: inline-block;
-  }
-  div img {
-    width: 30vw;
-    height: 30vh;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-main {
-  border: 5px #000 solid;
-  margin: 10px;
-}
-*/
-/* 
-
-.container {
+.grid {
   display: grid;
-  grid-template-columns: 1fr;
-  justify-items: center;
+  grid-template-columns: auto;
+  gap: 10px;
 }
-*/
-/* img{
-  width: 200px;
-  height: 200px;
-  padding: 5px;
-} */
 
-/* .child {
-  position: relative;
-  display: inline-block;
-  border: 5px black solid;
-  margin: 5px;
-  border-radius: 5px;
-} */
-
-/* 
-
-.label {
-  display: none;
-  position: absolute;
-  top: 40%;
-  left: 40%;
-} */
-/* 
-.button {
-  display: inline-block;
-  border: 2px solid #000;
-  padding: 5px;
-  border-radius: 25px;
+/* Medium Screen */
+@media screen and (min-width: 772px){
+  .grid {
+    grid-template-columns: auto auto;
+  }
+  .grid img {
+    border-radius: 50%;
+  }
+  .grid figure:last-child {
+    grid-column: 1 / span 2;
+  } 
 }
-*/
-/* 
-.button:hover {
-  background-color:#fff;
-} */
 
-/* 
-footer {
-  display: flex;
-  justify-content: center;
-} */
+/* Large Screen */
+@media screen and (min-width: 992px){
+  .grid img {
+    border-radius: 0;
+  }
+  /** NOTE: last figures double/size remains, since it's not mentioned!  */
+  .grid figure:nth-child(3n) {
+    grid-column: 1 / span 2;
+  } 
+}
 
-/* 
-header {
-  border-radius: 5px;
-  border: 5px #000 solid;
-  margin: 10px;
-} */
+/* Scroll-Behavior */
+@media screen and (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto !important;
+  }
+}
 
-/* 
-.label {
-  display: none;
-  position: absolute;
-  top: 40%;
-  left: 40%;
-} */
-/* 
-.child:hover .label {
-  display: block;
-} */
+/* Dark-Mode Settings */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-light: #333;
+    --text-light: #dedede;
+    --background-dark: #1a1a1a;
+    --caption-color-dark: #ffd700;
+    --border-color-dark: #000000;
+    --text-dark: #fff;
+  }
+  body {
+    background-color: var(--background-dark);
+    color: var(--text-dark);
+  }
+  img {
+    border-color: var(--border-color-dark);
+  }
+  .grid figcaption {
+    color: var(--caption-color-dark);
+  }
+  a {
+    color: var(--text-dark);
+  }
+}
